--- a/config.json
+++ b/config.json
@@ -1,1 +1,92 @@
-
+[
+	{
+		"key": "dbln",
+		"value": "%7B%2261550281761987%22%3A%22o91CJamu%22%2C%2261576967601502%22%3A%22osgKxpZA%22%2C%22100078581187793%22%3A%221pRk6DJS%22%2C%2261578344922308%22%3A%22OqSGuy20%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.597Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "ar_debug",
+		"value": "1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "sb",
+		"value": "GBeDaMPDaKqNDhn5JmwW_Q-Y",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "dpr",
+		"value": "1.125",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "wd",
+		"value": "1647x756",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "c_user",
+		"value": "100078581187793",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "datr",
+		"value": "RNWIaPXU5BpeAy_DyYEC8b0e",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "xs",
+		"value": "30%3Ayj5BRu4VCs_IRA%3A2%3A1753797956%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "fr",
+		"value": "10qgQ6oKmY3EUuqv7.AWdBhc39tYywhQQmar3RwNjWrvaCs88i2J9Z0n3IOczHWFfSNCU.BoiFyG..AAA.0.0.BoiNVH.AWeG0_x2OHLjclCyMsKP2TnBFq0",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	},
+	{
+		"key": "presence",
+		"value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1753798090483%2C%22v%22%3A1%7D",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-29T14:08:47.598Z",
+		"lastAccessed": "2025-07-29T14:08:47.598Z"
+	}
+]
